--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
     <h2>Team Reflections</h2>
     <div class="info-box">
       <ul>
-        <li><strong>Member A:</strong> "I learned how encryption works behind the scenes and improved my JS skills. I contributed to Caesar and Playfair logic."</li>
-        <li><strong>Member B:</strong> "I focused on frontend and UI flow, and practiced organizing code better using JavaScript functions."</li>
-        <li><strong>Member C:</strong> "I handled documentation and algorithm research. I now understand RSA and AES logic more deeply."</li>
+        <li><strong>Member JOY:</strong> "I learned how encryption works behind the scenes and improved my JS skills. I contributed to Caesar and Playfair logic."</li>
+        <li><strong>Member Mahedi:</strong> "I focused on frontend and UI flow, and practiced organizing code better using JavaScript functions."</li>
       </ul>
     </div>
   </div>
